# code-companion

./: README.md  pyproject.toml
business/: breakeven.md  business-model-canvas.md  customer-journey.md  dataflow.md  marketing-plan.md  partner-targets.md  tech-spec.md  user-stories.md
docs/: BMC.md  PRD.md
src/: code_companion.py  config.py  main.py  monitor.py  project.py  user.py
tests/: test_code_companion.py  test_main.py  test_monitor.py
