[project]
name = "code-companion"
version = "0.1.0"
description = "Simple rule‑based code explanation tool for non‑technical founders."
authors = [{name = "Axentx"}]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
